--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,22 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.miniorange</groupId>
-  <artifactId>sso</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0.0</version>
-  <name>Java SAML Single Sign-on</name>
-  <description>miniOrange Java SAML Single Sign On (SSO) Connector acts as a SAML Service Provider which can be configured to establish the trust between the SSO connector and a SAML capable Identity Provider to securely authenticate the users into your application. The SSO connector uses the SAML protocol for exchanging authentication and authorization data with the Identity Provider.</description>
-  <url>https://github.com/miniOrangeDev/java-sso</url>
-  <dependencies>
-    <dependency>
-    	<groupId>javax.servlet</groupId>
-    	<artifactId>javax.servlet-api</artifactId>
-    	<version>3.1.0</version>
-    	<scope>provided</scope>
-    </dependency>
-    <dependency>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.miniorange</groupId>
+	<artifactId>sso</artifactId>
+	<packaging>jar</packaging>
+	<version>1.0.0</version>
+	<name>Java SAML Single Sign-on</name>
+	<description>miniOrange Java SAML Single Sign On (SSO) Connector acts as a SAML Service Provider which can be configured to establish the trust between the SSO connector and a SAML capable Identity Provider to securely authenticate the users into your application. The SSO connector uses the SAML protocol for exchanging authentication and authorization data with the Identity Provider.</description>
+	<url>https://github.com/miniOrangeDev/java-sso</url>
+	<dependencies>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.opensaml</groupId>
 			<artifactId>opensaml</artifactId>
 			<version>2.6.4</version>
@@ -54,9 +55,9 @@
 			<version>4.5.3</version>
 		</dependency>
 		<dependency>
-  			<groupId>com.google.code.gson</groupId>
-  			<artifactId>gson</artifactId>
-  			<version>2.8.5</version>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -68,51 +69,101 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.7</version>
 		</dependency>
-  </dependencies>
-  <properties>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
-  </properties>
-  <build>
-    <finalName>sso</finalName>
-    <plugins>
-    	<plugin>
-    		<groupId>org.apache.maven.plugins</groupId>
-    		<artifactId>maven-shade-plugin</artifactId>
-    		<version>3.2.1</version>
-    		<configuration>
-			    <filters>
-			        <filter>
-			            <artifact>*:*</artifact>
-			            <excludes>
-			                <exclude>META-INF/*.SF</exclude>
-			                <exclude>META-INF/*.DSA</exclude>
-			                <exclude>META-INF/*.RSA</exclude>
-			            </excludes>
-			        </filter>
-			    </filters>
-			    <!-- Additional configuration. -->
-			</configuration>
-    	</plugin>
-    </plugins>
-  </build>
-  <licenses>
-	  <license>
-	    <name>MIT License</name>
-	    <url>http://www.opensource.org/licenses/mit-license.php</url>
-	  </license>
-  </licenses>
-  <developers>
-    <developer>
-      <name>miniOrange</name>
-      <email>info@xecurify.com</email>
-      <organization>miniOrange</organization>
-      <organizationUrl>https://www.miniorange.com</organizationUrl>
-    </developer>
-  </developers>
-  <scm>
-	  <connection>scm:git:git://github.com/miniOrangeDev/java-sso.git</connection>
-	  <developerConnection>scm:git:ssh://github.com:miniOrangeDev/java-sso.git</developerConnection>
-	  <url>https://github.com/miniOrangeDev/java-sso</url>
+	</dependencies>
+	<properties>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
+	</properties>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
+	<build>
+		<finalName>sso</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.2.1</version>
+				<configuration>
+					<filters>
+						<filter>
+							<artifact>*:*</artifact>
+							<excludes>
+								<exclude>META-INF/*.SF</exclude>
+								<exclude>META-INF/*.DSA</exclude>
+								<exclude>META-INF/*.RSA</exclude>
+							</excludes>
+						</filter>
+					</filters>
+					<!-- Additional configuration. -->
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://www.opensource.org/licenses/mit-license.php</url>
+		</license>
+	</licenses>
+	<developers>
+		<developer>
+			<name>miniOrange</name>
+			<email>info@xecurify.com</email>
+			<organization>miniOrange</organization>
+			<organizationUrl>https://www.miniorange.com</organizationUrl>
+		</developer>
+	</developers>
+	<scm>
+		<connection>scm:git:git://github.com/miniOrangeDev/java-sso.git</connection>
+		<developerConnection>scm:git:ssh://github.com:miniOrangeDev/java-sso.git</developerConnection>
+		<url>https://github.com/miniOrangeDev/java-sso</url>
 	</scm>
 </project>
